Odev 9 Ders12 paketi eklendi.