@@ -3,6 +3,7 @@ package com.newrdmb.ders12.odev9;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 
@@ -10,7 +11,7 @@ public class URLCheck {
 
     public static void validateURL(String mylink) throws InvalidURLException {
         try {
-            URL url = new URL(mylink);
+            URL url = URI.create(mylink).toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("HEAD");
             int responseCode = connection.getResponseCode();
@@ -25,8 +26,5 @@ public class URLCheck {
         }
     }
 }
-class InvalidURLException extends Exception {
-    public InvalidURLException(String message) {
-        super(message);
-    }
-}
+
+
